fix font size of labels on ios

--- a/src/app/import/import.component.scss
+++ b/src/app/import/import.component.scss
@@ -6,14 +6,13 @@ ion-item.import-item {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 0.9rem;
 
         ion-text {
             margin-bottom: 10px;
         }
 
         ion-icon {
-            font-size: 50px;
+            font-size: 55px;
         }
     }
 
