--- a/src/global.scss
+++ b/src/global.scss
@@ -73,6 +73,10 @@ ion-item {
     width: 100%;
 }
 
+ion-label.checkbox-label {
+    font-size: 1rem !important;
+}
+
 /*
  - Fonts
  */
